# flowplane

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.json  LICENSE  README.md  bun.lockb  components.json  index.html  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts  vite.config.ts.timestamp-1701880254499.mjs  vite.config.ts.timestamp-1719139128555.mjs
.github/workflows/: release.yml
migrations/: Slate.tsx
migrations/2023-03-01-132631_create_planes/: down.sql  up.sql
migrations/2023-03-04-121457_create_linear/: down.sql  up.sql
migrations/2024-01-08-173322_create_slate/: down.sql  up.sql
migrations/2024-06-13-082912_create_whiteboard/: down.sql  up.sql
migrations/2024-06-15-061728_create_clipboard/: down.sql  up.sql
src/: App.tsx  Portal.tsx  Settings.tsx  constants.ts  declerations.d.ts  main.tsx  state.ts  styles.css  tools.ts
src-tauri/: Cargo.toml  default.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  models.rs  plane.rs  schema.rs  settings.rs
src-tauri/src/commands/: clipboard.rs  jsdebug.rs  linear.rs  mod.rs  ollama.rs  page_markdown.rs  plane.rs  settings.rs  slate.rs  vector.rs  whiteboard.rs
src-tauri/src/core/: db.rs  mod.rs  vdb.rs
src/components/: Chat.tsx  Clipboard.tsx  ClosePortal.tsx  Command.tsx  CreateFromWebpage.tsx  DeletePlane.tsx  EmptyScreen.tsx  FreeFlowItem.tsx  Intro.tsx  NewPlane.tsx  PlaneOptions.tsx  PortalInfo.tsx  PortalIntro.tsx  ScratchPadItem.tsx  Sidebar.tsx  theme-provider.tsx
src/components/planes/: FreeFlow.tsx  Infinite.tsx  Linear.tsx  ScratchPad.tsx  Slate.tsx  Whiteboard.tsx
src/components/planes/LinearAI/: ImageGen.tsx
src/components/ui/: alert-dialog.tsx  button.tsx  mode-toggle.tsx  select.tsx  toast.tsx  toaster.tsx
src/lib/: replaceJson.ts
src/state/: clipboard.ts  plane.ts  view.ts
